--- a/style.css
+++ b/style.css
@@ -24,8 +24,14 @@ body{
     height: 400px;
     border-radius: 50%;
     background-color: rgb(97, 67, 67);
-    border: 3px solid rgb(248, 213, 167);
-    box-shadow: 0px 0px 25px  rgb(31, 2, 2);
+    border: 5px solid rgb(175, 141, 146);
+    box-shadow: 0px 0px 25px  rgb(69, 10, 19);
+   display: flex;
+   justify-content: center;
+   align-items: center;
+
+   
+
 }
 
 .clock span{
@@ -33,6 +39,7 @@ body{
     transform: rotate(calc(30deg * var(--i)));
     inset: 10px;
     text-align: center;
+  
 
 }
 
@@ -40,4 +47,32 @@ body{
     position: absolute;
     transform: rotate(calc(-30deg * var(--i)));
     display: inline-block;
+    font-size: 25px;
+}
+
+.clock::before{
+    content: '';
+    position: absolute;
+    width: 10px;
+    height: 10px;
+    background-color: rgb(219, 220, 237);
+    border-radius: 50%;
+}
+.hand{
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items:flex-end;
+
+
+
+}
+
+.hand i{
+    position: absolute;
+    background-color:var(--color);
+    width: 5px;
+    height: 80px;
+    border-radius: 10px;
+
 }
