--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
     padding: 0;
     box-sizing: border-box;
     font-family: Arial, Helvetica, sans-serif;
-    color: azure;
+    color: rgb(189, 226, 38);
 }
 
 body{
@@ -11,7 +11,7 @@ body{
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background-color: rgb(53, 51, 51);
+    background-color: rgb(17, 36, 45);
 
 }
 
@@ -23,9 +23,9 @@ body{
     width: 400px;
     height: 400px;
     border-radius: 50%;
-    background-color: rgb(97, 67, 67);
+    background-color: rgb(117, 62, 62);
     border: 5px solid rgb(175, 141, 146);
-    box-shadow: 0px 0px 25px  rgb(69, 10, 19);
+    box-shadow: 0px 0px 25px  rgb(146, 12, 12);
    display: flex;
    justify-content: center;
    align-items: center;
